modificado p para tag h2

--- a/index.html
+++ b/index.html
@@ -1,21 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-	<title>Vinicius Italo - Info</title>
-		<meta charset="utf-8">
-		<meta name="description" content="Formatação de Computadores, Informática e Alguns recursos.">
-		<meta name="keywords" content="Formatação, Informática, Windows">
-		<meta name="author" content="Vinicius Italo">
-</head>
-<body>
-	<header>
-		<h1>Vinicius Italo - Info</h1>
-	</header>
-	<main>
-		
-	</main>
-	<footer>
-		
-	</footer>
-</body>
-</html>
+<h2>Testando</h2>
